--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="row">
-          <a class="navbar-brand " href="#"> <h3 class="col-md-offset-1">Neighborhood Map</h3></a>
+          <p class="navbar-brand col-md-10">
+            <span class="col-md-offset-1 col-md-4">Josh Neighborhood</span><span class="col-md-offset-3 col-md-3"> My Neighborhood Map</span></p>
         </div>
       </div>
     </nav>
-
+    <br><br><br>
     <div class="container-fluid">
       <br><br><br>
-      <div class="row">
-        <div class="col-md-offset-1 col-md-3" >
+      <div class="row clan">
+        <div class="col-md-2" >
           <br><br><hr>
           <ul>
             <li></li>
@@ -26,15 +27,20 @@
           <hr>
         </div>
 
-        <div class="col-md-7">
-
+        <div class="col-md-10">
+          <div id="map"></div>
         </div>
       </div>
-
+      <div class="row">
+        <div id="map" class="col-md-12"></div>
+      </div>
 
     </div>
-
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
+    <div id="map"></div>
     <script type="text/javascript" src="js/script.js"></script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBizLop2T6ChioBI80RGcWkPEmp07RPtYI&v=3&callback=showMap">
+    </script>
+
   </body>
 </html>
