--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Simple Map</title>
+    <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
-    <title>Neighborhood Map</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="js/knockout-3.2.0.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/application.js"></script>
 
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBizLop2T6ChioBI80RGcWkPEmp07RPtYI&callback=initMap"
+    async defer></script>
+    <script type="text/javascript" src="js/application.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -20,32 +23,19 @@
         </div>
       </div>
     </nav>
-    <br><br><br>
     <div class="container-fluid">
-      <br><br><br>
       <div class="row clan">
         <div class="col-md-2" >
-          <br><br><hr>
           <ul>
             <li></li>
           </ul>
-          <hr>
         </div>
 
         <div class="col-md-10">
           <div id="map"></div>
         </div>
       </div>
-      <div class="row">
-        <div id="map" class="col-md-12"></div>
-      </div>
 
     </div>
-    <div id="map"></div>
-    <script type="text/javascript" src="js/script.js"></script>
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBizLop2T6ChioBI80RGcWkPEmp07RPtYI&v=3&callback=showMap">
-    </script>
-
   </body>
 </html>
