refactor: updated data-binding  On branch testing  Changes to be committed: 	modified:   index.html
Update the data-bindings

--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-2 clan" >
-          <div>
-        </div>
+        <div class="col-lg-2 clan">
+          <ul data-bind="Foreach: myPlaces">
+            <li data-bind="value: name"></li>
+          </ul>
         </div>
 
         <div class="col-lg-10">
           <div gmapC>
-            <div id="map" ></div>
+            <div data-bind="mapper2" id="map"></div>
           </div>
         </div>
       </div>
@@ -35,11 +36,9 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/knockout-3.2.0.js"></script>
-
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBizLop2T6ChioBI80RGcWkPEmp07RPtYI&callback=initMap"
-    async defer></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBizLop2T6ChioBI80RGcWkPEmp07RPtYI&v=3&libraries=places"></script>
     <script type="text/javascript" src="js/application.js"></script>
   </body>
 </html>
