fix: fix  the foreach loop  On branch master  Your branch is up to date with 'origin/master'.  Changes to be committed: 	modified:   index.html 	modified:   js/application.js
fix foreach loop and data-binding in index.html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-2 clan">
-          <ul data-bind="Foreach: myPlaces">
-            <li data-bind="value: name"></li>
+          <ul data-bind="foreach: myPlaces">
+            <li>
+              <span  data-bind="text: name"></span>
+            </li>
           </ul>
         </div>
 
