--- a/index.html
+++ b/index.html
@@ -5,38 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles2.css">
 
   </head>
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="row">
-          <p class="navbar-brand col-md-10">
-            <span class="col-md-offset-1 col-md-4">Josh Neighborhood</span><span class="col-md-offset-3 col-md-3"> My Neighborhood Map</span></p>
-        </div>
-      </div>
-    </nav>
-
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-2 clan">
-          <ul data-bind="foreach: myPlaces">
-            <li>
-              <span  data-bind="text: name"></span>
-            </li>
-          </ul>
+        <div class="col-md-12">
+          <div class="row">
+
+
+          </div>
+
         </div>
 
-        <div class="col-lg-10">
-          <div gmapC>
+      </div>
+
+
+      <div class="row">
+        <div class="col-md-2">
+          <div class="row">
+            <ul data-bind="foreach: myPlaces">
+              <li  data-bind="text: name" class="clan"></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-md-10">
+          <div class="row">
             <div data-bind="mapper2" id="map"></div>
           </div>
         </div>
       </div>
 
-    </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="row">
 
+          </div>
+
+        </div>
+
+      </div>
+
+
+
+
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/knockout-3.2.0.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
