--- a/index.html
+++ b/index.html
@@ -10,20 +10,11 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="row">
 
-
-          </div>
-
-        </div>
-
-      </div>
 
 
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-lg-2">
           <div class="row">
             <ul data-bind="foreach: myPlaces">
               <li  data-bind="text: name" class="clan"></li>
@@ -31,21 +22,11 @@
           </div>
         </div>
 
-        <div class="col-md-10">
+        <div class="col-lg-10">
           <div class="row">
-            <div data-bind="mapper2" id="map"></div>
+            <div data-bind="mapper2"  id="map"></div>
           </div>
         </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-12">
-          <div class="row">
-
-          </div>
-
-        </div>
-
       </div>
 
 
