--- a/index.html
+++ b/index.html
@@ -9,20 +9,29 @@
 
   </head>
   <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+     <div class="container-fluid">
+       <div class="row">
+         <p class="navbar-brand col-md-10">
+            <span class="col-md-offset-1 col-md-4">Josh Neighborhood</span><span class="col-md-offset-3 col-md-3"> My Neighborhood Map</span></p>
+       </div>
+      </div>
+    </nav>
+
+
+
     <div class="container-fluid">
-
-
-
-      <div class="row">
-        <div class="col-lg-2">
-          <div class="row">
+      <div class="row" >
+        <div class="col-md-2">
+          <div class="row" id="hh">
+            <br><br><br>
             <ul data-bind="foreach: myPlaces">
               <li  data-bind="text: name" class="clan"></li>
             </ul>
           </div>
         </div>
 
-        <div class="col-lg-10">
+        <div class="col-md-10">
           <div class="row">
             <div data-bind="mapper2"  id="map"></div>
           </div>
