--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
       <div class="row" >
         <div class="col-md-2">
           <div class="row" id="hh">
-            <br><br><br>
+            <br><br><br><br><br>
+
+            <div class="input-group bb">
+              <input type="text" class="form-control" placeholder="Search" name="search">
+              <div class="input-group-btn">
+                <button class="btn btn-default" type="submit">
+                  <i class="glyphicon glyphicon-search"></i>
+                </button>
+              </div>
+            </div>
+
             <ul data-bind="foreach: myPlaces">
               <li  data-bind="text: name" class="clan"></li>
             </ul>
