refactor: Updated header
 On branch master
 Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <div class="container-fluid">
        <div class="row">
          <p class="navbar-brand col-md-12">
-            <span class="col-md-offset-1 col-md-4">Josh Neighborhood</span><span class="col-md-offset-2 col-md-5"> My Neighborhood Map</span></p>
+            <span class="col-md-3 pp">Josh Neighborhood</span><span class="col-md-4"> My Neighborhood Map</span></p>
        </div>
       </div>
     </nav>
