--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 
             <div class="input-group bb">
               <!--<input type="text" class="form-control" name="search" placeholder="Search"  type="search"  data-bind="value: query1, valueUpdate: 'keyup'" autocomplete="off"> -->
-              <input type="search" class="form-control" placeholder="Search"  data-bind="value:
-              $parent.query1, valueUpdate: 'keyup'" autocomplete="off">
+              <input type="search" class="form-control" placeholder="Filter"  data-bind="value:query1, valueUpdate: 'keyup'" autocomplete="off">
               <div class="input-group-btn">
                 <button class="btn btn-default" type="submit">
                   <i class="glyphicon glyphicon-search"></i>
@@ -37,8 +36,8 @@
               </div>
             </div>
 
-            <ul data-bind="foreach: myPlaces">
-              <li data-bind="text: name, click: $parent.showMarker" class=" clan"></li>
+            <ul data-bind="foreach: filterPlace"> <!-- myPlaces-->
+              <li data-bind="text: name" class=" clan"></li>
             </ul>
           </div>
         </div>
