feat: Add graphicon button
 Changes to be committed:
 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
   </head>
@@ -13,11 +15,13 @@
      <div class="container-fluid">
        <div class="row">
          <p class="navbar-brand col-md-12">
+           <button type="button" class="btn btn-default btn-md hb">
+             <span class="glyphicon glyphicon-list"></span>
+           </button>
             <span class="col-md-3 pp">Josh Neighborhood</span><span class="col-md-4"> My Neighborhood Map</span></p>
        </div>
       </div>
     </nav>
-
 
 
     <div class="container-fluid">
