--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <div class="row">
          <p class="navbar-brand col-md-12">
            <button type="button" class="btn btn-default btn-md hb">
-             <span class="glyphicon glyphicon-list"></span>
+             <span class="glyphicon glyphicon-menu-hamburger"></span> Open List
            </button>
             <span class="col-md-3 pp">Josh Neighborhood</span><span class="col-md-4"> My Neighborhood Map</span></p>
        </div>
@@ -29,6 +29,10 @@
         <div class="col-md-2">
           <div class="row" id="hh">
             <br><br><br><br><br>
+
+            <button type="button" class="btn btn-default btn-md">
+              <span class="glyphicon glyphicon-menu-left"></span> close List
+            </button> <br><br>
 
             <div class="input-group bb">
               <!--<input type="text" class="form-control" name="search" placeholder="Search"  type="search"  data-bind="value: query1, valueUpdate: 'keyup'" autocomplete="off"> -->
