refactor: Add data-bind to updated place
 Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
 
             <ul data-bind="foreach: filterPlace"> <!-- myPlaces-->
-              <li data-bind="text: name" class=" clan"></li>
+              <li data-bind="text: name, click: $parent.boundMarker" class=" clan"></li>
             </ul>
           </div>
         </div>
@@ -64,6 +64,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/knockout-3.2.0.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/knockout.mapping-latest.js"> </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBizLop2T6ChioBI80RGcWkPEmp07RPtYI&v=3&libraries=places"></script>
     <script type="text/javascript" src="js/application.js"></script>
   </body>
