feat: Add element id
 Changes to be committed:
	 modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
            <button type="button" class="btn btn-default btn-md hb">
              <span class="glyphicon glyphicon-menu-hamburger"></span> Open List
            </button>
-            <span class="col-md-3 pp">Josh Neighborhood</span><span class="col-md-4"> My Neighborhood Map</span></p>
+            <span class="col-md-3 pp">Josh Neighborhood</span><span class="col-md-4" id="mnm"> My Neighborhood Map</span></p>
        </div>
       </div>
     </nav>
 
 
     <div class="container-fluid">
-      <div class="row" >
-        <div class="col-md-2">
-          <div class="row" id="hh">
+      <div class="row" style="height:100%">
+        <div class="col-md-2" style="height:100%">
+          <div class="row" id="hh" style="height:100%">
             <br><br><br><br><br>
 
             <button type="button" class="btn btn-default btn-md">
@@ -50,9 +50,9 @@
           </div>
         </div>
 
-        <div class="col-md-10">
-          <div class="row">
-            <div data-bind="mapper"  id="map"></div>
+        <div class="col-md-10" style="height:100%">
+          <div class="row" style="height:100%">
+            <div data-bind="mapper"  id="map" style="height:100%"></div>
           </div>
         </div>
       </div>
