feat: Add Ids to list
 Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <div class="container-fluid">
        <div class="row">
          <p class="navbar-brand col-md-12">
-           <button type="button" class="btn btn-default btn-md hb">
+           <button id="navv" type="button" class="btn btn-default btn-md hb">
              <span class="glyphicon glyphicon-menu-hamburger"></span> Open List
            </button>
             <span class="col-md-3 pp">Josh Neighborhood</span><span class="col-md-4" id="mnm"> My Neighborhood Map</span></p>
@@ -26,7 +26,7 @@
 
     <div class="container-fluid">
       <div class="row" style="height:100%">
-        <div class="col-md-2" style="height:100%">
+        <div class="col-md-2 listbox" style="height:100%">
           <div class="row" id="hh" style="height:100%">
             <br><br><br><br><br>
 
@@ -50,7 +50,7 @@
           </div>
         </div>
 
-        <div class="col-md-10" style="height:100%">
+        <div id="mp" class="col-md-10" style="height:100%">
           <div class="row" style="height:100%">
             <div data-bind="mapper"  id="map" style="height:100%"></div>
           </div>
