feat: Add handle on list
 Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -15,6 +16,7 @@
      <div class="container-fluid">
        <div class="row">
          <p class="navbar-brand col-md-12">
+           <span id="btnn" class="material-icons hh">list</span>
            <button id="navv" type="button" class="btn btn-default btn-md hb">
              <span class="glyphicon glyphicon-menu-hamburger"></span> Open List
            </button>
@@ -28,11 +30,11 @@
       <div class="row" style="height:100%">
         <div class="col-md-2 listbox" style="height:100%">
           <div class="row" id="hh" style="height:100%">
-            <br><br><br><br><br>
+            <!-- <br><br><br><br><br>
 
             <button type="button" class="btn btn-default btn-md ">
               <span class="glyphicon glyphicon-menu-left"></span> close List
-            </button> <br><br>
+            </button> <br><br> -->
 
             <div class="input-group bb">
               <!--<input type="text" class="form-control" name="search" placeholder="Search"  type="search"  data-bind="value: query1, valueUpdate: 'keyup'" autocomplete="off"> -->
